manifests/without-cert-manager/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-manual
spec:
  selector:
    app: nginx-manual
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: NodePort
